--- a/hparams/modified_best_hyperconformer.yaml
+++ b/hparams/modified_best_hyperconformer.yaml
@@ -1,6 +1,3 @@
-# Generated 2024-06-26 from:
-# /content/bestrq_fairness/hparams/modified_best_hyperconformer.yaml
-# yamllint disable
 # ############################################################################
 # Model: SSL: Best-RQ HyperConformer
 # Encoder: HyperConformer Encoder (w/Random Projection Quantizer)
@@ -11,29 +8,29 @@
 # Seed needs to be set at top of yaml, before objects with parameters are made
 
 seed: 2000
-__set_seed: !apply:torch.manual_seed [2000]
+__set_seed: !apply:torch.manual_seed [!ref <seed>]
 
 project_name: bestrq
 experiment_name: hyper-conformer-base
 # data_folder: /gpfsscratch/rech/nkp/uaj64gk/corpus/LibriSpeech/
 data_folder: /content/drive/MyDrive/Best_RQ_thesis/data/LibriSpeech/
-output_folder: results/best_hyperconformer/2000
-output_wer_folder: results/best_hyperconformer/2000/
+output_folder: !ref results/best_hyperconformer/<seed>
+output_wer_folder: !ref <output_folder>/
 
 ckpt_interval_min: 15
-save_folder: results/best_hyperconformer/2000/save
+save_folder: !ref <output_folder>/save
 # Logging file for every N optimizer steps (many lines)
-train_steps_log: results/best_hyperconformer/2000/train_steps_log.txt
+train_steps_log: !ref <output_folder>/train_steps_log.txt
 # Logging file per epoch
-train_stage_log: results/best_hyperconformer/2000/train_stage_log.txt
+train_stage_log: !ref <output_folder>/train_stage_log.txt
 
 # train_splits: ["train-clean-100", "train-clean-360", "train-other-500"]
-train_splits: [train-clean-100]
-dev_splits: [dev-clean]
-test_splits: [test-clean]
+train_splits: ["train-clean-100"]
+dev_splits: ["dev-clean"]
+test_splits: ["test-clean"]
 train_csv: results/bestrq/csv/train.csv
 valid_csv: results/bestrq/csv/dev-clean.csv
-skip_prep: true
+skip_prep: True
 
 avoid_if_longer_than: 60.0
 avoid_if_shorter_than: 2.0
@@ -57,11 +54,11 @@ seconds_per_batch: 100 # Fits in a 32GB GPUs (V100)
 train_num_buckets: 50
 
 train_dataloader_options:
-  num_workers: 4
+   num_workers: 4
 
 test_dataloader_options:
-  batch_size: 8   # DynamicBatching not used at testing time
-  num_workers: 4
+   batch_size:  8 # DynamicBatching not used at testing time
+   num_workers: 4
 
 # Training parameters (based on Section 4.1.1 of Best-RQ paper)
 lr: 0.0008
@@ -82,7 +79,7 @@ num_encoder_layers: 12 # section 4.1.1
 num_decoder_layers: 0
 d_ffn: 2048
 transformer_dropout: 0.1
-activation: &id001 !name:torch.nn.GELU
+activation: !name:torch.nn.GELU
 output_neurons: 5000
 encoder_layerdrop: 0.05
 # specify 'hypermixing' for usage of multi-head HyperMixer instead of MultiHeadAttention
@@ -108,89 +105,93 @@ cb_vocab: 8192
 
 ############################## models ################################
 
-CNN: &id003 !new:speechbrain.lobes.models.convolution.ConvolutionFrontEnd
-  input_shape: (8, 10, 80)
-  num_blocks: 2
-  num_layers_per_block: 1
-  out_channels: (128, 32)
-  kernel_sizes: (3, 3)
-  strides: (2, 2)
-  residuals: (False, False)
+CNN: !new:speechbrain.lobes.models.convolution.ConvolutionFrontEnd
+    input_shape: (8, 10, 80)
+    num_blocks: 2
+    num_layers_per_block: 1
+    out_channels: (128, 32)
+    kernel_sizes: (3, 3)
+    strides: (2, 2)
+    residuals: (False, False)
 
-Transformer: &id002 !new:speechbrain.lobes.models.transformer.TransformerASR.TransformerASR
-
-  input_size: 640
-  tgt_vocab: 5000
-  d_model: 512
-  nhead: 8
-  num_encoder_layers: 12
-  num_decoder_layers: 0
-  d_ffn: 2048
-  dropout: 0.1
-  activation: *id001
-  encoder_module: conformer
-  attention_type: hypermixing
-  normalize_before: true
-  causal: false
+Transformer: !new:speechbrain.lobes.models.transformer.TransformerASR.TransformerASR # yamllint disable-line rule:line-length
+    input_size: 640
+    tgt_vocab: !ref <output_neurons>
+    d_model: !ref <d_model>
+    nhead: !ref <nhead>
+    num_encoder_layers: !ref <num_encoder_layers>
+    num_decoder_layers: !ref <num_decoder_layers>
+    d_ffn: !ref <d_ffn>
+    dropout: !ref <transformer_dropout>
+    activation: !ref <activation>
+    encoder_module: !ref <encoder_module>
+    attention_type: !ref <attention_type>
+    normalize_before: True
+    causal: False
     #layerdrop_prob: !ref <encoder_layerdrop>
 
 # We must call an encoder wrapper so the decoder isn't run (we don't have any)
-wrapper: &id004 !new:speechbrain.lobes.models.transformer.TransformerASR.EncoderWrapper
-  transformer: *id002
-Quantizer: &id005 !new:.quantiser.RandomProjectionQuantizer
+wrapper: !new:speechbrain.lobes.models.transformer.TransformerASR.EncoderWrapper
+   transformer: !ref <Transformer>
+
+Quantizer: !new:.quantiser.RandomProjectionQuantizer
     # projection
-  input_dim: 320
+    input_dim: !ref <p_input>
     # codebook
-  cb_dim: 16
-  cb_vocab: 8192
+    cb_dim: !ref <cb_dim>    
+    cb_vocab: !ref <cb_vocab>
 
-linear: &id006 !new:speechbrain.nnet.linear.Linear
-
-  input_size: 512
-  n_neurons: 8192
+linear: !new:speechbrain.nnet.linear.Linear
+    input_size: !ref <d_model>
+    n_neurons: !ref <cb_vocab>
 
 modules:
-  CNN: *id003
-  wrapper: *id004
-  Quantizer: *id005
-  normalize: &id007 !new:speechbrain.processing.features.InputNormalization
+    CNN: !ref <CNN>
+    wrapper: !ref <wrapper>
+    Quantizer: !ref <Quantizer>
+    normalize: !ref <normalize>
+    linear: !ref <linear>
+
+model: !new:torch.nn.ModuleList
+    - [!ref <CNN>, !ref <wrapper>, !ref <Quantizer>, !ref <linear>]
+
+############################## features ################################
+
+
+compute_features: !new:speechbrain.lobes.features.Fbank
+    sample_rate: !ref <sample_rate>
+    n_fft: !ref <n_fft>
+    n_mels: !ref <n_mels>
+
+normalize: !new:speechbrain.processing.features.InputNormalization
     norm_type: global
     update_until_epoch: 4
 
 ############################## running ################################
 
 # define two optimizers here for two-stage training
-  linear: *id006
-model: &id008 !new:torch.nn.ModuleList
-- [*id003, *id004, *id005, *id006]
-compute_features: !new:speechbrain.lobes.features.Fbank
-  sample_rate: 16000
-  n_fft: 400
-  n_mels: 80
-
-normalize: *id007
 optimizer: !name:torch.optim.Adam
-  lr: 0.0008
-  betas: (0.9, 0.98)
-  eps: 0.000000001
+    lr: !ref <lr>
+    betas: (0.9, 0.98)
+    eps: 0.000000001
 
-noam_annealing: &id009 !new:speechbrain.nnet.schedulers.NoamScheduler
-  lr_initial: 0.0008
-  n_warmup_steps: 25000
+noam_annealing: !new:speechbrain.nnet.schedulers.NoamScheduler
+    lr_initial: !ref <lr>
+    n_warmup_steps: 25000
 
-epoch_counter: &id010 !new:speechbrain.utils.epoch_loop.EpochCounter
-  limit: 42
+epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounter
+    limit: !ref <number_of_epochs>
 
 train_steps_logger: !new:speechbrain.utils.train_logger.FileTrainLogger
-  save_file: results/best_hyperconformer/2000/train_steps_log.txt
+   save_file: !ref <train_steps_log>
 
 train_stage_logger: !new:speechbrain.utils.train_logger.FileTrainLogger
-  save_file: results/best_hyperconformer/2000/train_stage_log.txt
+   save_file: !ref <train_stage_log>
 
 checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
-  checkpoints_dir: results/best_hyperconformer/2000/save
-  recoverables:
-    model: *id008
-    noam_scheduler: *id009
-    normalizer: *id007
-    counter: *id010
+    checkpoints_dir: !ref <save_folder>
+    recoverables:
+        model: !ref <model>
+        noam_scheduler: !ref <noam_annealing>
+        normalizer: !ref <normalize>
+        counter: !ref <epoch_counter>
