--- a/hparams/modified_best_hyperconformer.yaml
+++ b/hparams/modified_best_hyperconformer.yaml
@@ -28,8 +28,13 @@ train_stage_log: !ref <output_folder>/train_stage_log.txt
 train_splits: ["train-clean-100"]
 dev_splits: ["dev-clean"]
 test_splits: ["test-clean"]
-train_csv: results/bestrq/csv/train.csv
-valid_csv: results/bestrq/csv/dev-clean.csv
+# train_csv: results/bestrq/csv/train.csv
+# train_csv: /content/drive/MyDrive/Best_RQ_thesis/librispeech_prepared/train-clean-100.csv
+train_csv: /content/drive/MyDrive/Best_RQ_thesis/data/librispeech_prepared2/train-clean-100.csv
+
+# valid_csv: results/bestrq/csv/dev-clean.csv
+# valid_csv: /content/drive/MyDrive/Best_RQ_thesis/librispeech_prepared/dev-clean.csv
+valid_csv: /content/drive/MyDrive/Best_RQ_thesis/data/librispeech_prepared2/dev-clean.csv
 skip_prep: True
 
 avoid_if_longer_than: 60.0
