--- a/results/best_hyperconformer/2000/hyperparams.yaml
+++ b/results/best_hyperconformer/2000/hyperparams.yaml
@@ -1,4 +1,4 @@
-# Generated 2024-06-26 from:
+# Generated 2024-06-27 from:
 # /content/bestrq_fairness/hparams/modified_best_hyperconformer.yaml
 # yamllint disable
 # ############################################################################
@@ -31,8 +31,14 @@ train_stage_log: results/best_hyperconformer/2000/train_stage_log.txt
 train_splits: [train-clean-100]
 dev_splits: [dev-clean]
 test_splits: [test-clean]
-train_csv: results/bestrq/csv/train.csv
-valid_csv: results/bestrq/csv/dev-clean.csv
+# train_csv: results/bestrq/csv/train.csv
+# train_csv: /content/drive/MyDrive/Best_RQ_thesis/librispeech_prepared/train-clean-100.csv
+train_csv: 
+  /content/drive/MyDrive/Best_RQ_thesis/data/librispeech_prepared2/train-clean-100.csv
+
+# valid_csv: results/bestrq/csv/dev-clean.csv
+# valid_csv: /content/drive/MyDrive/Best_RQ_thesis/librispeech_prepared/dev-clean.csv
+valid_csv: /content/drive/MyDrive/Best_RQ_thesis/data/librispeech_prepared2/dev-clean.csv
 skip_prep: true
 
 avoid_if_longer_than: 60.0
